tweak launch script - load latest libs